--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "@angular/compiler": "^16.0.0",
     "@angular/core": "^16.0.0",
     "@angular/forms": "^16.0.0",
+    "@angular/material": "^14.2.7",
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@microsoft/signalr": "^8.0.0",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "material-icons": "^1.13.12",
+    "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
+    "socket.io": "^4.7.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
